[TASK] Add width and height

--- a/Resources/Private/Templates/Iframe/Index.html
+++ b/Resources/Private/Templates/Iframe/Index.html
@@ -1,1 +1,6 @@
-grrrr
+<iframe src="https://map.geo.admin.ch/embed.html?lang={sys_language_isocode}&{settings.iframe.srcParam}"
+				width="{f:if(condition: settings.iframe.width, then: '{settings.iframe.width}', else: '100%')}"
+				height="{f:if(condition: settings.iframe.height, then: settings.iframe.height, else: '300px')}"
+				frameborder="0"
+				style="border:0"
+></iframe>
